--- a/FSUIPCHelper/FSUIPCHelper.csproj
+++ b/FSUIPCHelper/FSUIPCHelper.csproj
@@ -33,7 +33,7 @@
   <ItemGroup>
     <Reference Include="FSUIPCClient, Version=1.3.2758.28, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>FSUIPCClient\FSUIPCClient.dll</HintPath>
+      <HintPath>.\FSUIPCClient.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -45,9 +45,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="FSUIPCClient\FSUIPCClient.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
